# rust-1.52.1-link-error

./: Cargo.toml  README.md
.cargo/: config
bare-gdbstub/src/: lib.rs
bare-gdbstub/src/gdbstub_impl/: mod.rs
bare-gdbstub/src/protocol/: mod.rs  recv_packet.rs
kernel/: Cargo.toml  link.x
kernel/.cargo/: config
kernel/src/: asm.S  debug.rs  irq.rs  main.rs  services.rs
kernel/src/arch/: mod.rs  riscv.rs
kernel/src/arch/riscv/: irq.rs  mem.rs  process.rs  rand.rs  syscall.rs
src/: debug.rs
