[package]
authors = ["Sean Cross <sean@xobs.io>"]
description = "Core kernel for Xous, including task switching and memory management"
edition = "2018"
name = "kernel"
version = "0.8.2"

[dependencies]
# gdbstub = {path = "bare-gdbstub", optional = true, default_features = false}
gdbstub = {path = "gdbstub", optional = true, default_features = false}

[features]
gdbserver = ["gdbstub"]
print-panics = []
default = ["print-panics", "gdbserver"]
