[package]
authors = ["Sean Cross <sean@xobs.io>"]
description = "Core kernel for Xous, including task switching and memory management"
edition = "2018"
name = "kernel"
version = "0.8.2"

[dependencies]
bitflags = "1.2.1"
gdbstub = {path = "../gdbstub", optional = true, default_features = false}
gdbstub_arch = {path = "../gdbstub/gdbstub_arch", optional = true}
xous-kernel = {package = "xous", version = "0.8", features = ["forget-memory-messages"]}

[target.'cfg(target_arch = "riscv32")'.dependencies]
riscv = "0.5.6"

[features]
debug-print = []
gdbserver = ["gdbstub", "gdbstub_arch"]
print-panics = []
wrap-print = []
default = ["print-panics", "gdbserver"]

[target.'cfg(any(windows, unix))'.dependencies]
crossbeam-channel = "0.5"
debug-here = "0.2.2"
hex = "0.4"
lazy_static = "1.4"
rand = "0.7"

[profile.release]
codegen-units = 1 # 1 better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = "fat" 
# panic = "abort" # Remove some panic information
# opt-level = 'z'  # Optimize for size instead of performance
