[package]
authors = ["Sean Cross <sean@xobs.io>"]
description = "Core kernel for Xous, including task switching and memory management"
edition = "2018"
name = "kernel"
version = "0.8.2"

[dependencies]
gdbstub = {path = "../gdbstub", optional = true, default_features = false}
gdbstub_arch = {path = "../gdbstub/gdbstub_arch", optional = true}

[features]
gdbserver = ["gdbstub", "gdbstub_arch"]
print-panics = []
default = ["print-panics", "gdbserver"]
